# pyssp_sysml2

./: .gitmodules  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_local.txt
docs/: development.md
examples/: cli_usage.sh  module_usage.py
examples/aircraft_subset/: composition.sysml  part_definitions.sysml
src/pyssp_sysml2/: __init__.py  cli.py  cli_generate_fmi.py  cli_generate_ssd.py  cli_generate_ssv.py  fmi.py  fmi_helpers.py  generate_model_descriptions.py  generate_parameter_set.py  generate_ssd.py  paths.py  ssd.py  ssp_helpers.py  ssv.py  sync.py  sysml.py
tests/: reference_utils.py  sysml_test_models.py  test_cli.py  test_generate_model_descriptions.py  test_generate_parameter_set.py  test_generate_ssd.py  test_generate_sysml.py  test_sync.py  test_sync_ssd_to_sysml.py  test_utils.py
tests/fixtures/: README.md
tests/fixtures/aircraft_subset/: architecture_reference.json  port_definitions.sysml  requirements.sysml
tests/reference/: SystemStructure.ssd  parameters.ssv
tests/reference/model_descriptions/AutopilotModule/: modelDescription.xml
tests/reference/model_descriptions/Environment/: modelDescription.xml
tests/reference/model_descriptions/MissionComputer/: modelDescription.xml
tests/resources/: embrace.ssd  openscaling.ssd  test.sh
