[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyssp_sysml2"
version = "0.1.0"
description = "Generate SSP artifacts from a SysML v2 architecture model."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "pyssp contributors" }
]
dependencies = [
  "pycps_sysmlv2",
  "pyssp_standard"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[project.scripts]
pyssp = "pyssp_sysml2.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyssp_sysml2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
